[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/graph.gd" type="Script" id=1]
[ext_resource path="res://PixelIntv-OPxd.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 27
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.960784, 0.87451, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.109804, 0.0941176, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.113725, 0.658824, 0.164706, 1 )

[sub_resource type="DynamicFont" id=7]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.364706, 0.247059, 0.384314, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.364706, 0.247059, 0.384314, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.364706, 0.247059, 0.384314, 1 )

[sub_resource type="DynamicFont" id=10]
size = 67
font_data = ExtResource( 2 )

[node name="graph" type="Node2D"]
script = ExtResource( 1 )

[node name="title" type="Label" parent="."]
margin_left = 385.0
margin_top = 13.0
margin_right = 1242.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "                              Desempenho"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title2" type="Label" parent="."]
margin_left = 340.0
margin_top = 743.0
margin_right = 1245.0
margin_bottom = 776.0
custom_fonts/font = SubResource( 1 )
text = "     Clique no nome dos cursos para ver possíveis carreiras"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="obs" type="Label" parent="."]
margin_left = 371.0
margin_top = 56.0
margin_right = 2038.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )
text = "OBS: Isso não é um teste vocacional. Ter a maior pontuação 
     não significa que você sò é apto para tal carreira"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Button" parent="."]
margin_left = 1390.0
margin_top = 4.0
margin_right = 1512.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SI" type="WindowDialog" parent="."]
margin_left = 416.0
margin_top = 205.0
margin_right = 1191.0
margin_bottom = 531.0
custom_colors/title_color = Color( 1, 0, 0, 1 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SI"]
margin_left = 10.0
margin_top = 7.0
margin_right = 585.0
margin_bottom = 242.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Estas carreiras estão diretamente ligadas a graduação neste curso, mas não são as únicas.

- Analista de aplicações
- Analista de cibersegurança
- Analista de dados
- Cientista de dados
- Administrador de base de dados
- Manager de Sistemas de Informação
- Consultor de TI
- Responsável técnico de TI
- Testador de penetração
- Engenheiro de Software
- Analista de Sistemas
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="RichTextLabel" parent="SI"]
margin_left = 269.0
margin_top = 297.0
margin_right = 774.0
margin_bottom = 321.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url=https://www.prospects.ac.uk/careers-advice/what-can-i-do-with-my-degree]Clique aqui para saber mais[/url]"
text = "Clique aqui para saber mais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SI button" type="ToolButton" parent="."]
margin_left = 461.0
margin_top = 249.0
margin_right = 659.0
margin_bottom = 677.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC" type="WindowDialog" parent="."]
margin_left = 410.0
margin_top = 214.0
margin_right = 1186.0
margin_bottom = 541.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CC"]
margin_left = 14.0
margin_top = 7.0
margin_right = 650.0
margin_bottom = 276.0
rect_scale = Vector2( 1.15, 1.15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Estas carreiras estão diretamente ligadas a graduação neste curso, mas não são as únicas.

- Analista de aplicações
- Analista de cibersegurança
- Desenvolvedor de aplicações
- Analista de dados
- Analista de computação forense
- Designer de games
- Desenvolvedor de games
- Engenheiro de Machine Learning
- Engenheiro de Software
- Analista de Sistemas
- Designer UX
- Designer Web
- Desenvolvedor Web"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="RichTextLabel" parent="CC"]
margin_left = 269.0
margin_top = 297.0
margin_right = 774.0
margin_bottom = 321.0
rect_scale = Vector2( 1.15, 1.15 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url=https://www.prospects.ac.uk/careers-advice/what-can-i-do-with-my-degree]Clique aqui para saber mais[/url]"
text = "Clique aqui para saber mais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC button" type="ToolButton" parent="."]
margin_left = 672.0
margin_top = 261.0
margin_right = 870.0
margin_bottom = 673.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ES" type="WindowDialog" parent="."]
margin_left = 430.0
margin_top = 216.0
margin_right = 1203.0
margin_bottom = 543.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ES"]
margin_left = 10.0
margin_top = 28.0
margin_right = 585.0
margin_bottom = 263.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Estas carreiras estão diretamente ligadas a graduação neste curso, mas não são as únicas.

- Desenvolvedor de aplicações
- Analista de cibersegurança
- Desenvolvedor de games
- Manager de Sistemas de Informação
- Consultor de TI
- Programador multimídia
- Desenvolvedor Web
- Designer Web
- Engenheiro de Software

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="RichTextLabel" parent="ES"]
margin_left = 269.0
margin_top = 297.0
margin_right = 774.0
margin_bottom = 321.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url=https://www.prospects.ac.uk/careers-advice/what-can-i-do-with-my-degree]Clique aqui para saber mais[/url]"
text = "Clique aqui para saber mais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ES button" type="ToolButton" parent="."]
margin_left = 880.0
margin_top = 271.0
margin_right = 1078.0
margin_bottom = 672.0

[node name="EC" type="WindowDialog" parent="."]
margin_left = 412.0
margin_top = 202.0
margin_right = 1194.0
margin_bottom = 530.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="EC"]
margin_left = 19.0
margin_top = 27.0
margin_right = 594.0
margin_bottom = 262.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Estas carreiras estão diretamente ligadas a graduação neste curso, mas não são as únicas.

- Desenvolvedores e Programadores de software 
- Manager de sistemas de informação e informática
- Analista de informática e informações
- Administrador de banco de dados/sistemas e arquitetos de rede
- Especialistas em informática 
- Engenheiros de hardware 
- Analista de gestão 
- Engenheiros elétricos e eletrônicos
- Gerentes de arquitetura e engenharia

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="RichTextLabel" parent="EC"]
margin_left = 269.0
margin_top = 297.0
margin_right = 774.0
margin_bottom = 321.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url=https://www.prospects.ac.uk/careers-advice/what-can-i-do-with-my-degree]Clique aqui para saber mais[/url]"
text = "Clique aqui para saber mais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EC button" type="ToolButton" parent="."]
margin_left = 1091.0
margin_top = 256.0
margin_right = 1291.0
margin_bottom = 668.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Surprise" type="ToolButton" parent="."]
margin_left = 17.0
margin_top = 19.0
margin_right = 231.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 8 )
text = "Surpresa"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inteli" type="WindowDialog" parent="."]
margin_left = 446.0
margin_top = 164.0
margin_right = 1175.0
margin_bottom = 580.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Inteli"]
margin_left = 25.0
margin_top = 20.0
margin_right = 475.0
margin_bottom = 68.0
rect_scale = Vector2( 1.5, 1.5 )
text = "   Se você se interessou pela área de tecnologia acesse o link abaixo 
e aprenda mais sobre o Inteli, instituto focado na formação de líderes 
                                      em tecnologia."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteliLink" type="RichTextLabel" parent="Inteli"]
margin_left = 202.0
margin_top = 196.0
margin_right = 487.0
margin_bottom = 282.0
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[url=https://www.inteli.edu.br/]Inteli[/url]"
text = "Inteli"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="menu" to="." method="_on_Button_pressed"]
[connection signal="meta_clicked" from="SI/Link" to="." method="_on_Link_meta_clicked"]
[connection signal="pressed" from="SI button" to="." method="_on_SI_button_pressed"]
[connection signal="meta_clicked" from="CC/Link" to="." method="_on_Link_meta_clicked"]
[connection signal="pressed" from="CC button" to="." method="_on_CC_button_pressed"]
[connection signal="meta_clicked" from="ES/Link" to="." method="_on_Link_meta_clicked"]
[connection signal="pressed" from="ES button" to="." method="_on_ES_button_pressed"]
[connection signal="meta_clicked" from="EC/Link" to="." method="_on_Link_meta_clicked"]
[connection signal="pressed" from="EC button" to="." method="_on_EC_button_pressed"]
[connection signal="pressed" from="Surprise" to="." method="_on_Surprise_pressed"]
[connection signal="meta_clicked" from="Inteli/InteliLink" to="." method="_on_InteliLink_meta_clicked"]
